[tool.poetry]
name = "blaise-editing-cloud-functions"
version = "0.1.0"
description = "A collection of cloud function related to Blaise Editing Service"
authors = ["Thomas Wills <62559442+Willst1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^24.3.0"
pytest = "^8.1.1"
flask = "^2.0.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
codecov = "^2.1.13"
google-cloud-logging = "^3.10.0"
flake8 = "^7.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"